# monorepo

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  .gitmodules  .prow.yaml  .rpm_deps.bzl  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  OWNERS  OWNERS_ALIASES  README.md  REPO.bazel  WORKSPACE  WORKSPACE.bzlmod  go.mod  go.sum  maven_install.json  requirements.txt
.github/workflows/: publish-src-and-vendor.yaml  release-src-and-vendor.yaml
.prow/: BUILD  postsubmit.yaml  presubmit.yaml
base_images/: BUILD.bazel
configs/bazel/: .bazelrc  BUILD  BUILD.bazel  common.bazelrc  custom.bazelrc  deps.bzl
configs/bazel/registry/modules/apple_support/1.11.1/: source.json
configs/bazel/registry/modules/apple_support/1.5.0/: MODULE.bazel
configs/bazel/registry/modules/bazel_linux_x86_64/: metadata.json
configs/bazel/registry/modules/bazel_linux_x86_64/7.0.0/: MODULE.bazel  source.json
configs/bazel/registry/modules/bazel_skylib/1.5.0/: source.json
configs/bazel/registry/modules/com_github_cdolivet_editarea/: metadata.json
configs/bazel/registry/modules/com_github_cdolivet_editarea/0.8.2/patches/: patch-100000.patch
configs/bazel/registry/modules/gazelle/: metadata.json
configs/bazel/registry/modules/gazelle/0.35.0/: MODULE.bazel  source.json
configs/bazel/registry/modules/io_bazel_rules_docker/: metadata.json
configs/bazel/registry/modules/io_bazel_rules_docker/0.25.0/: MODULE.bazel  source.json
configs/bazel/registry/modules/io_bazel_rules_k8s/: metadata.json
configs/bazel/registry/modules/io_bazel_rules_k8s/0.7/: MODULE.bazel
configs/bazel/registry/modules/io_grpc_grpc_java/: metadata.json
configs/bazel/registry/modules/io_grpc_grpc_java/1.60.1/: source.json
configs/bazel/registry/modules/llvm_linux_x86_64/: metadata.json
configs/bazel/registry/modules/llvm_linux_x86_64/17.0.6/: MODULE.bazel  source.json
configs/bazel/registry/modules/protobuf/: metadata.json
configs/bazel/registry/modules/protobuf/3.19.6/: MODULE.bazel  source.json
configs/bazel/registry/modules/rules_cc/: metadata.json
configs/bazel/registry/modules/rules_go/: metadata.json
configs/bazel/registry/modules/rules_go/0.44.2/: MODULE.bazel  source.json
configs/bazel/registry/modules/rules_go/0.45.0/: source.json
configs/bazel/registry/modules/rules_java/: metadata.json
configs/bazel/registry/modules/rules_java/7.3.2/: MODULE.bazel
configs/bazel/registry/modules/rules_jvm_external/: metadata.json
configs/bazel/registry/modules/rules_jvm_external/5.3/: source.json
configs/bazel/registry/modules/rules_license/0.0.7/: source.json
configs/bazel/registry/modules/rules_proto/4.0.0/: MODULE.bazel
configs/bazel/registry/modules/rules_proto/5.3.0/: MODULE.bazel
configs/bazel/registry/modules/rules_python/: metadata.json
configs/bazel/registry/modules/rules_python/0.28.0/: source.json
configs/bazel/registry/modules/stardoc/0.6.2/: MODULE.bazel
configs/bazel/registry/modules/sysroot_linux_x86_64/: metadata.json
configs/bazel/registry/modules/sysroot_linux_x86_64/20231231.200535/: MODULE.bazel  source.json
configs/bazel/registry/modules/sysroot_linux_x86_64/20231231.200535/patches/: patch-100000.patch
configs/bazel/registry/modules/toolchains_llvm/0.10.3/: source.json
configs/bazel/registry/modules/zlib/1.3/: MODULE.bazel
configs/prow/: BUILD  postsubmit.tpl.yaml  postsubmit.yaml.tpl  presubmit.tpl.yaml  presubmit.yaml.tpl  prow.tpl.yaml  prow_yaml.tpl
deploy/oj/: BUILD  BUILD.bazel  OWNERS  README.md  deploy.tpl.sh
deploy/oj/k3s-cuhk/common/: configmap.yaml  deployment.yaml  network-policy.yaml  pvc.yaml  service.yaml
deploy/oj/k3s-cuhk/prod/: configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml  pdb.yaml
deploy/oj/k3s-cuhk/staging/: configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml
deploy/oj/k3s-hkbu/prod/: deployment.yaml  ingress.yaml  network-policy.yaml  pvc.yaml  service.yaml
deploys/oj/: BUILD  README.md
deps_bzl/: BUILD  generate.py  include.py  parser.py  regenerate.py
deps_yaml/: BUILD  include.py  regenerate.py
hack/: update_deps.sh
lagacy/BSL-BackwardChaining/: main.cpp  parse.h  solver.h
lagacy/CompetitiveProgramming/templates/: ComputationalGeometry  Core  GraphTheory  GraphTheory.Dinic'sAlgorithm.hpp  GraphTheory.Edmonds'sMatchingAlgorithm  GraphTheory.Edmonds'sMatchingAlgorithm.hpp  Math  StringAlgorithms.AhoCorasickAlgorithm  StringAlgorithms.SuffixAutomaton  StringAlgorithms.SuffixAutomaton.hpp
lagacy/gathering/: README.md  main.py  start.sh  stop.sh
lagacy/kernel/: bootloader.s  makefile
lagacy/magic/: README.md
legacy/BSL-BackwardChaining/: README.md  expr.h  lex.h
legacy/gathering/: cmd.py  conf.py.sample
legacy/kernel/: kernel.c  linker.ld  vga.c  vga.h
oj/: Dockerfile.oj-c99runner  Dockerfile.oj-judge  Dockerfile.oj-server  OWNERS  pom.xml
oj/oj-c99runner/: BUILD  java_wrapper.sh  pom.xml
oj/oj-core/: BUILD  BUILD.bazel  LICENSE  pom.xml
oj/oj-core/src/main/java/su/boleyn/oj/core/: Config.java  FileUtils.java  HtmlUtils.java  SQL.java
oj/oj-judge/: BUILD  pom.xml
oj/oj-server/: BUILD  BUILD.bazel  pom.xml
oj/oj-server/src/main/java/su/boleyn/oj/server/: Main.java  User.java  Versions.java
oj/oj-server/src/main/webapp/: chat.jsp  contests.jsp  custom_test.jsp  index.jsp  login.jsp  problem.jsp  problemset.jsp  redirect.jsp  register.jsp  standings.jsp  status.jsp  submission.jsp  submit.jsp
oj/oj-server/src/main/webapp/WEB-INF/: web.xml
oj/oj-server/src/main/webapp/static/: my.css  my.js
oj/oj-server/src/main/webapp/static/editarea/reg_syntax/: erlang.js
storage/public/: README.md
storage/public/assets/: BUILD
storages/public/: README.md
tools/deps_bzl/: BUILD  include.py  parser.py  regenerate.py
tools/deps_updater/: BUILD  bazel_updater.py  deps_updater.py  maven_updater.py  pip_updater.py  version.py
urlshortener/: BUILD  BUILD.bazel  Dockerfile  WORKSPACE  pom.xml
urlshortener/src/main/java/su/boleyn/urlshortener/: BasicAuthHandler.java  LockHandler.java  PasswordIdentityManager.java  URLInfo.java  URLShortener.java  URLShortenerServer.java
(+1237 files in other folders)
